fixed jumps

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
 }
 
 .wrapper {
-	max-width: 80vw;
+	max-width: 75vw;
 
 	margin: 0 auto;
 	padding: 0;
